--- a/public/frame.html
+++ b/public/frame.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPS Farcaster Frame</title>
 
+    <!-- Minimal OpenGraph data -->
     <meta property="og:title" content="RPS Farcaster Miniapp" />
     <meta property="og:description" content="Play Rock Paper Scissors inside Farcaster" />
     <meta property="og:image" content="https://rps-farcaster-miniapp.vercel.app/icon.png" />
 
+    <!-- Farcaster Frame meta -->
     <meta property="fc:frame" content="vNext" />
     <meta property="fc:frame:button:1" content="Play Rock Paper Scissors" />
     <meta property="fc:frame:post_url" content="https://rps-farcaster-miniapp.vercel.app/" />
   </head>
   <body>
-    Frame metadata endpoint.
+    <main>RPS Farcaster Frame metadata endpoint.</main>
   </body>
 </html>
